added inlay hints

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -9,6 +9,7 @@
     <depends>org.jetbrains.plugins.go</depends>
 
     <extensions defaultExtensionNs="com.intellij">
+        <codeInsight.inlayProvider implementationClass="com.github.unserialize.golangconfdemo.MyHints" language="go" />
     </extensions>
 
     <applicationListeners>
